--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,12 @@
     <![endif]-->
 </head>
 <body>
-	<header class="navbar navbar-fixed-top navbar-inverse">
+	<header class="navbar navbar-default navbar-inverse">
 		<div class="navbar-inner">
 			<div class="container">
 				<%= link_to "sample app", '#', id: "logo" %>
 				<nav>
-					<ul class="nav pull-right">
+					<ul class="nav pull-right navbar-nav">
 						<li><%= link_to "Home", '#' %></li>
 						<li><%= link_to "Help", '#' %></li>
 						<li><%= link_to "Sign in", '#' %></li>
