--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="center hero-unit">
+<div class="center jumbotron">
 	<h1>Welcome to the Sample Page</h1>
 	<h2>
 		This is the Homepage for the Kleber's Blog
@@ -6,4 +6,3 @@
 
 	<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
 </div>
-
