--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
-<div class="center jumbotron">
-	<h1>Welcome to the Sample Page</h1>
+<div class="center hero-unit">
+	<h1>Bem-vindo ao Rola Blog</h1>
 	<h2>
-		This is the Homepage for the Kleber's Blog
+		Homepage do Blog da Rola
 	</h2>	
 
 	<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
