Make a basic User model(including secure password)

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    <a href="http://meoapp.com.br/">Meoapp</a>
-    by Kleber Tavares
+    Rola Blog
+    by <a href="https://github.com/krebaum">Kleber Tavares</a>
   </small>
   <nav>
     <ul>
