--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,10 +2,11 @@
 <h1>Contact</h1>
 	<p>
   		<div class="hero-unit">
-  			<h3>Contact: </h3></br>
-  			Google: kleberst88@gmail.com </br>
+  			<h3>Surpreenda-se: </h3></br>
+  			<%= link_to image_tag("google.png",alt: "Google"), 'https://google.com/+KleberTavares88'%>
   			<%= link_to image_tag("github.png",alt: "Github"), 'https://github.com/krebaum'%>
   			<%= link_to image_tag("twitter.png",alt: "Twitter"), 'https://twitter.com/kr3baum'%>
+  			<%= link_to image_tag("facebook.png",alt: "Facebook"), 'https://www.facebook.com/kleberst'%>
   		</div>
 
 	</p>
